--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 80px;
 }
 .half-width{
     width: 50%;
@@ -25,4 +26,10 @@ section{
     font-weight: 700;
     padding: 10px 40px;
     border-radius: 20px;
+}
+.about-me{
+    background-image: url("./shapes/7.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
