--- a/style.css
+++ b/style.css
@@ -40,3 +40,46 @@ width: 300px;
     margin-left: -15%;
     padding-top: 10%;
 }
+.food-recipie{
+    display: flex;
+    margin-bottom: 80px;
+}
+.different-itm{
+    text-align: left;
+    width: 100%;
+    padding: 20px;
+    border-radius: 20px;
+    margin: 15px;
+    box-shadow: 10px 10px 40px gray;
+}
+.text{
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
+}
+.food-recipie{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0;
+}
+.different-itm img{
+    width: 300px;
+    border-radius: 20px;
+
+}
+.recipie{
+    display: block;
+}
+.food-recipie{
+    margin: 0;
+}
+.text h2,.text small{
+    color: gray;
+}
+.text h2{
+    font-size: 50px;
+    margin-bottom: 0px;
+}
+
+    
