--- a/style.css
+++ b/style.css
@@ -81,5 +81,24 @@ width: 300px;
     font-size: 50px;
     margin-bottom: 0px;
 }
+.countdown {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    width: 80%;
+    margin: 0 auto;
+  }
+  .countdown-item{
+      padding: 20px;
 
-    
+  }
+  .footer-section{
+    background: black;
+    padding: 70px;
+    text-align: center;
+    color: white;
+    margin: 20px;
+  }
