--- a/style.css
+++ b/style.css
@@ -100,5 +100,6 @@ width: 300px;
     padding: 70px;
     text-align: center;
     color: white;
-    margin: 20px;
+    margin-top: 50px;
+    display: block;
   }
